404 redirects to home

--- a/public/404.html
+++ b/public/404.html
@@ -4,8 +4,8 @@
 		<meta http-equiv="refresh" content="0; URL=/" />
 		<title>Page Not Found</title>
 		<script>
-			// This script redirects to the correct route after the page loads
-			window.location.replace("/" + window.location.pathname);
+			// This script redirects to the home page
+			window.location.href = "/";
 		</script>
 	</head>
 	<body></body>
