--- a/public/404.html
+++ b/public/404.html
@@ -24,27 +24,46 @@
 			// Otherwise, leave pathSegmentsToKeep as 0.
 			var pathSegmentsToKeep = 0;
 
-			var l = window.location;
-			l.replace(
-				l.protocol +
-					"//" +
-					l.hostname +
-					(l.port ? ":" + l.port : "") +
-					l.pathname
-						.split("/")
-						.slice(0, 1 + pathSegmentsToKeep)
-						.join("/") +
-					"/?/" +
-					l.pathname
+			(function (l) {
+				if (l.search[1] === "/") {
+					var decoded = l.search
 						.slice(1)
-						.split("/")
-						.slice(pathSegmentsToKeep)
-						.join("/")
-						.replace(/&/g, "~and~") +
-					(l.search ? "&" + l.search.slice(1).replace(/&/g, "~and~") : "") +
-					l.hash
-			);
+						.split("&")
+						.map(function (s) {
+							return s.replace(/~and~/g, "&");
+						})
+						.join("?");
+					window.history.replaceState(
+						null,
+						null,
+						l.pathname.slice(0, -1) + decoded + l.hash
+					);
+				} else {
+					var newUrl =
+						l.protocol +
+						"//" +
+						l.hostname +
+						(l.port ? ":" + l.port : "") +
+						l.pathname
+							.split("/")
+							.slice(0, 1 + pathSegmentsToKeep)
+							.join("/") +
+						"/?/" +
+						l.pathname
+							.slice(1)
+							.split("/")
+							.slice(pathSegmentsToKeep)
+							.join("/")
+							.replace(/&/g, "~and~") +
+						(l.search ? "&" + l.search.slice(1).replace(/&/g, "~and~") : "") +
+						l.hash;
+					window.location.replace(newUrl);
+				}
+			})(window.location);
 		</script>
 	</head>
-	<body></body>
+	<body>
+		<h1>Not Found</h1>
+		<p>The requested URL was not found on this server.</p>
+	</body>
 </html>
