--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="icon" type="image/svg+xml" href="/frekkFitFavIcon.svg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/frekkFitFavIcon16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/frekkFitFavIcon32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/frekkFitFavIcon180.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>FrEkK Fit Party</title>
 	</head>
