--- a/index.html
+++ b/index.html
@@ -1,37 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="dark">
-	<head>
-		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/frekkFitFavIcon.svg" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/frekkFitFavIcon16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/frekkFitFavIcon32.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/frekkFitFavIcon180.png" />
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/frekkFitFavIcon.svg" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/frekkFitFavIcon16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/frekkFitFavIcon32.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/frekkFitFavIcon180.png"
+    />
     <link rel="manifest" href="/site.webmanifest" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>FrEkK Fit Party</title>
-	</head>
-	<body class="bg-background-color-primary dark:bg-background-color-primary-dark">
-		<div id="root"></div>
-		<script type="module" src="/src/main.jsx"></script>
-		<script type="text/javascript">
-			// Single Page Apps for GitHub Pages
-			// https://github.com/rafgraph/spa-github-pages
-			(function (l) {
-				if (l.search[1] === "/") {
-					var decoded = l.search
-						.slice(1)
-						.split("&")
-						.map(function (s) {
-							return s.replace(/~and~/g, "&");
-						})
-						.join("?");
-					window.history.replaceState(
-						null,
-						null,
-						l.pathname.slice(0, -1) + decoded + l.hash
-					);
-				}
-			})(window.location);
-		</script>
-	</body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FrEkK Fit Party</title>
+  </head>
+  <body
+    class="bg-background-color-primary dark:bg-background-color-primary-dark"
+  >
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+    <script type="text/javascript">
+      // Single Page Apps for GitHub Pages
+      // https://github.com/rafgraph/spa-github-pages
+      (function (l) {
+        if (l.search[1] === '/') {
+          var decoded = l.search
+            .slice(1)
+            .split('&')
+            .map(function (s) {
+              return s.replace(/~and~/g, '&');
+            })
+            .join('?');
+          window.history.replaceState(
+            null,
+            null,
+            l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      })(window.location);
+    </script>
+  </body>
 </html>
