--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body
     class="bg-background-color-primary dark:bg-background-color-primary-dark"
   >
-    <div id="root" class="mx-auto max-w-[1536px]"></div>
+    <div id="root" class="mx-auto"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
