feat: implement modal functionality with Zustand store and create Modal component

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <body
     class="bg-background-color-primary dark:bg-background-color-primary-dark"
   >
+    <div id="modal"></div>
     <div id="root" class="mx-auto"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script type="text/javascript">
